<resources>
    <string name="app_name">home-assignment-1</string>
    <string name="button_submit">Submit</string>
    <string name="button_clear">Clear</string>
    <string name="text_name">Name</string>
    <string name="edittext_name">Enter your name here</string>
    <string name="text_roll">Rollno</string>
    <string name="edittext_roll">Enter your rollno here</string>
    <string name="text_branch">Branch</string>
    <string name="edittext_branch">Enter your branch here</string>
    <string name="text_course1">Course-1</string>
    <string name="text_course2">Course-2</string>
    <string name="text_course3">Course-3</string>
    <string name="text_course4">Course-4</string>
</resources>
